tenants/team-a/bases/hello-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: team-a
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 50m
          limits:
            cpu: 200m
            memory: 200m
