tenants/team-a/bases/hello-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: team-a
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
