tenants/team-a/bases/hello-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: team-a
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: hello
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-svc
                port:
                  number: 8080
